# OS

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG.txt  ChangeLog.txt  Dependencies  Externals  INSTALL  INSTALL.txt  LICENSE  LICENSE.txt  Makefile.am  Makefile.in  OSParameter.xml  OSRegistry.html  OSRepository.html  OSRepository.xml  OSSolverService.cpp  OSaL.html  OSbL.html  OScL.html  OScsharp.sln  OSdL.html  OSeL.html  OSgL.html  OShL.html  OSiL.html  OSiL_SE.html  OSlL.html  OSnL.html  OSoL.html  OSpL.html  OSqL.html  OSrL.html  OSsL.html  OSuL.html  README  appveyor.yml  configure  (+49 more)
OS/: .cdtproject  .project  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  os-uninstalled.pc.in  os.pc.in
OS/CoinAllExamples/CppAD/: Makefile.in  ipopt_cppad.cpp  main.cpp
OS/CoinAllExamples/addCuts/: OSAddCuts.cpp
OS/CoinAllExamples/osTestCode/: OSTestCode.cpp
OS/CoinAllExamples/template/: Makefile.in
OS/MSVisualStudio/v10/: OS.sln
OS/MSVisualStudio/v7/: OS.sln  OSCommon.sln
OS/MSVisualStudio/v8/: OS.sln  OSCommon.sln
OS/MSVisualStudio/v9/: OS.sln
OS/MSVisualStudioOSCommon/v8/: OSCommon.sln
OS/MSVisualStudioOSExamples/: notes.txt  osExamples.sln
OS/MSVisualStudioOSExamples/addCuts/: addCuts.vcproj
OS/MSVisualStudioOSExamples/algorithmicDiff/: algorithmicDiff.vcproj
OS/MSVisualStudioOSExamples/branchCutPrice/: branchCutPrice.vcproj
OS/MSVisualStudioOSExamples/cglCuts/: cglCuts.vcproj
OS/MSVisualStudioOSExamples/instanceGenerator/: instanceGenerator.vcproj
OS/MSVisualStudioOSExamples/osModDemo/: osModDemo.vcproj
OS/MSVisualStudioOSExamples/osModificationDemo/: osModificationDemo.vcproj
OS/MSVisualStudioOSExamples/osRemoteTest/: osRemoteTest.vcproj
OS/MSVisualStudioOSExamples/osResultDemo/: osResultDemo.vcproj
OS/MSVisualStudioOSExamples/osSolverDemo/: osSolverDemo.vcproj
OS/MSVisualStudioOSExamples/osTestCode/: ipopt.out  osTestCode.vcproj
OS/MSVisualStudioOSExamples/template/: template.vcproj
OS/applications/: Makefile.am  Makefile.in
OS/applications/amplClient/: Makefile.am  Makefile.in  OSAmplClient.cpp  OSAmplClient2.cpp  OSAmplClient_old.cpp  amplClient.cpp  hs71.mod
OS/applications/fileUpload/: Makefile.am  Makefile.in  OSFileUpload.cpp  OSFileUpload.java  fileUpload.cpp
OS/applications/matlab/: OSMatlabSolverMex.cpp  macOSXscript.txt
OS/applications/parsingTest/: Makefile.am  Makefile.in  parsingTest.cpp  parsingTest.py
OS/data/: CppADTest.osil  CppADTestLag.osil  HS071_NLP.osil  OSSolverTests.xls  afiro.osil  aircrafta.osil  aircrfta.mod  avion2.mod  avion2.osil  blockqp1.osil  callBackTest.osil  callBackTestRowMajor.osil  configure.ac  demo.osol  demo.ospl  galenet.osil  hs71.osil  kennington.config  lotsize.osrl  markowitz.config  markowitz.m  osilrosenbrockmodsum.osil  p0033.osil  parinc.mps_osil  parincLinear.m  parincLinear.osil  parincLinear.osrl  parincLinearInteger.osil  parincLinearJun.osil  parincNonlinear.osil  parincQuadratic.osil  parincnonlinear.mod  remoteSolve1.osol  remoteSolve2.osol  remoteSolve3.osol  remotegsbkip.osol  remoteosil.osol  retrieve.osol  rosenbrock.osil  rosenbrockmod.osil  (+15 more)
OS/doc/: CoinEasy.bbl  CoinEasy.ind  CoinEasy.tex  Future_Work.tex  OSConstitution.tex  OSReleaseProcedure.tex  UsingCoinAll.bbl  UsingCoinAll.idx  UsingCoinAll.tex  UsingCoinAllBinary.tex  UsingCoinAllLibs.tex  UsingCoinBinary.bbl  UsingCoinBinary.ind  UsingCoinBinary.tex  UsingCoinLibs.ind  UsingCoinLibs.tex  UsingCoinlibs.bbl  UsingCoinlibs.ind  UsingCoinlibs.tex  UsingOS.ind  UsingOS.tex  buildSystemInfo.txt  coinEasyServer.tex  enumitem.sty  genericParser.tex  osConstitution.tex  osDevelopersBible.tex  osUsersManual-NEW.ind  osUsersManual-NEW.tex  osUsersManual-OLD.aux  osUsersManual-OLD.idx  osUsersManual-OLD.lof  osUsersManual-OLD.lot  osUsersManual-OLD.toc  osUsersManual.bbl  osUsersManual.bib  osUsersManual.ind  osUsersManual.tex  osUsersManual_1.1.idx  osUsersManual_1.1.ind  (+14 more)
OS/examples/: Makefile.am  Makefile.in  makefile.am
OS/inc/: config_os.h.in
OS/m4/: ac_coin_socket_libs.m4
OS/misc/: example-all.osel  example1.osal  misc.cpp  sampleMatrixProgramming-v6.osil
OS/schemas/: ARMA.stoch  ComplexTypes.xlsx  Distribution-usecases.rtf  DistributionDesign.rtf  ElementsAndReferences.xlsx  Modifications.xlsx  Node_ex.docx  Node_ex.txt  Node_ex2.txt  NotesOnRealTimeData-30-Oct-2015.txt  OSParameter.xsd  OSRegistry.xsd  OSRepository.xsd  OSaL.xsd  OSbL.xsd  OSeL.xsd  OSgL.xsd  OSiL.xsd  OSiL2.xsd  OSlL.xsd  OSmL.xsd  OSnL-Nodes.txt  OSnL-Nodes.xlsx  OSnL.xsd  OSnL2.xsd  OSoL.xsd  OSpL.xsd  OSqL.xsd  OSrL.xsd  OSsL.xsd  OSuL.xsd  Rules-aug-2014.rtf  TypeRef-temp.xlsx  junk.tmp  lintrans.stoch  node_ex.osil  node_ex.pptx  node_ex2.xlsx  optimizationservices.org  temp.osil  (+4 more)
OS/src/: Makefile.am  Makefile.in  OSConfig.h  OSSolverService.cpp  OSSolverService2.cpp  OSSolverService_old.cpp  config.h.in  config_default.h  config_os.h.in  config_os_default.h  help.txt  makefile.am
OS/stylesheets/: OSrL.css  OSrL.xslt
OS/test/: Makefile.am  Makefile.in  parsingTest.cpp  parsingTest.py  unitTest.cpp
OS/v2.0/: OSBonminSolver.cpp  OSCoinSolver.cpp  OSInstance.h  OSIpoptSolver.cpp  OSParameters.h  OSParseosol.l  OSParseosol.y  OSParseosrl.cpp  OSParseosrl.l  OSParseosrl.tab.cpp  OSParseosrl.tab.hpp  OSParseosrl.y  OSResult.cpp  OSResult.h  OSoLWriter.cpp  OSrLParserData.h  OSrLWriter.cpp  errorExample.osrl  osUsersManual_2.0.tex  parserTest.osrl  unitTest.cpp
OS/wsdl/: OScL.wsdl  OShL.wsdl
OSCommon/OS/: LICENSE  Makefile.am  Makefile.in  configure  configure.ac
src/: Makefile.am
src/OSAgent/: Makefile.in  OSSolverAgent.cpp  OShL.cpp
src/OSCommonInterfaces/: DefaultSolver.cpp  Makefile.am  Makefile.in  OSInstance.h  OSResult.cpp  OSResult.h  OSnLNode.cpp  OSrLWriter.cpp
src/OSParsers/: Makefile.am  Makefile.in  OSiLParserData.cpp  parseosil.cpp  parseosil.l  parseosil.output  parseosil.tab.cpp  parseosil.y  parseosrl.output  parseosrl.tab.hpp  parseosrl.y  parseosss.cpp
src/OSUtils/: FileUtil.cpp  Makefile.am  Makefile.in  MathUtil.cpp  OSParameters.h
(+3721 files in other folders)
